--- a/InterviewAI.ipynb
+++ b/InterviewAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "3feef1b9-70ff-4c23-b8c0-23f730eaa54d",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,31 @@
       "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (2.0.4)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\keyu\\appdata\\roaming\\python\\python311\\site-packages (from requests>=2.26.0->SpeechRecognition) (2.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (2024.8.30)\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (2024.8.30)\n",
+      "Requirement already satisfied: transformers in c:\\users\\keyu\\anaconda3\\lib\\site-packages (4.43.3)\n",
+      "Requirement already satisfied: torch in c:\\users\\keyu\\anaconda3\\lib\\site-packages (2.4.0)\n",
+      "Requirement already satisfied: filelock in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (3.13.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.24.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (6.0.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2023.10.3)\n",
+      "Requirement already satisfied: requests in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2.32.3)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.4.3)\n",
+      "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.19.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (4.65.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (4.9.0)\n",
+      "Requirement already satisfied: sympy in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (1.12)\n",
+      "Requirement already satisfied: networkx in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (3.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (3.1.3)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (2023.10.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from jinja2->torch) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\keyu\\appdata\\roaming\\python\\python311\\site-packages (from requests->transformers) (2.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2024.8.30)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sympy->torch) (1.3.0)\n"
      ]
     }
    ],
@@ -59,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "c725592e-f487-44e5-b9c9-7c11d503d31a",
    "metadata": {},
    "outputs": [
@@ -67,9 +91,9 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the candidate's name:  asdf\n",
-      "Enter candidate e-mail:  asdf\n",
-      "Enter candidate application position:  asdf\n"
+      "Enter the candidate's name:  1\n",
+      "Enter candidate e-mail:  1\n",
+      "Enter candidate application position:  1\n"
      ]
     }
    ],
@@ -82,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "7c75cf68-318c-461d-8084-be5252e20234",
    "metadata": {},
    "outputs": [
@@ -175,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "386d7397-d8b8-4a39-9ccf-e905fbd57de2",
    "metadata": {},
    "outputs": [
@@ -222,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "0a162d30-d9ee-4e04-8148-823eb33a60c8",
    "metadata": {},
    "outputs": [
@@ -267,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "dcbb673e-2e78-4f67-be53-63a2427cb444",
    "metadata": {},
    "outputs": [
@@ -315,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "58a1d460-7b35-4bcb-a25a-36502e8d6e76",
    "metadata": {},
    "outputs": [
@@ -348,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "id": "82d407e3-59d5-474c-bd1e-eea797ac14eb",
    "metadata": {},
    "outputs": [],
@@ -400,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "id": "cee32d01-7c2d-44e3-87f4-7d607cc3cc19",
    "metadata": {},
    "outputs": [
@@ -461,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "ae56dfc3-c6c7-4b20-bbb5-5d587b97df61",
    "metadata": {},
    "outputs": [
@@ -469,8 +493,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sentence-transformers\n",
-      "  Downloading sentence_transformers-3.3.1-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: sentence-transformers in c:\\users\\keyu\\anaconda3\\lib\\site-packages (3.3.1)\n",
       "Requirement already satisfied: transformers<5.0.0,>=4.41.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (4.43.3)\n",
       "Requirement already satisfied: tqdm in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (4.65.0)\n",
       "Requirement already satisfied: torch>=1.11.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (2.4.0)\n",
@@ -499,14 +522,7 @@
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\keyu\\appdata\\roaming\\python\\python311\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.0.7)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2024.8.30)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
-      "Downloading sentence_transformers-3.3.1-py3-none-any.whl (268 kB)\n",
-      "   ---------------------------------------- 0.0/268.8 kB ? eta -:--:--\n",
-      "   ------ --------------------------------- 41.0/268.8 kB 2.0 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 184.3/268.8 kB 2.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 268.8/268.8 kB 2.1 MB/s eta 0:00:00\n",
-      "Installing collected packages: sentence-transformers\n",
-      "Successfully installed sentence-transformers-3.3.1\n"
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n"
      ]
     }
    ],
@@ -517,56 +533,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "20790d7b-6c5e-46f9-9edb-0a0f5a6bc8e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User query:  Explain semantic analysis applications.\n",
-      "Most Similar Question: What are the applications of semantic analysis?\n",
-      "Answer: Applications include chatbots and sentiment analysis.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Load pre-trained SBERT model\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "# # Load pre-trained SBERT model\n",
+    "# model = SentenceTransformer('all-MiniLM-L6-v2')\n",
     "\n",
-    "# Knowledge Base\n",
-    "questions = [\n",
-    "    \"What is semantic analysis?\",\n",
-    "    \"How does semantic analysis work?\",\n",
-    "    \"What are the applications of semantic analysis?\"\n",
-    "]\n",
-    "answers = [\n",
-    "    \"Semantic analysis is understanding meaning in NLP.\",\n",
-    "    \"It works by analysing context and relationships.\",\n",
-    "    \"Applications include chatbots and sentiment analysis.\"\n",
-    "]\n",
+    "# # Knowledge Base\n",
+    "# questions = [\n",
+    "#     \"What is semantic analysis?\",\n",
+    "#     \"How does semantic analysis work?\",\n",
+    "#     \"What are the applications of semantic analysis?\"\n",
+    "# ]\n",
+    "# answers = [\n",
+    "#     \"Semantic analysis is understanding meaning in NLP.\",\n",
+    "#     \"It works by analysing context and relationships.\",\n",
+    "#     \"Applications include chatbots and sentiment analysis.\"\n",
+    "# ]\n",
     "\n",
-    "# User Query\n",
-    "query = \"Explain semantic analysis applications.\"\n",
+    "# # User Query\n",
+    "# query = \"Explain semantic analysis applications.\"\n",
     "\n",
-    "# Compute embeddings\n",
-    "query_embedding = model.encode(query, convert_to_tensor=True)\n",
-    "question_embeddings = model.encode(questions, convert_to_tensor=True)\n",
+    "# # Compute embeddings\n",
+    "# query_embedding = model.encode(query, convert_to_tensor=True)\n",
+    "# question_embeddings = model.encode(questions, convert_to_tensor=True)\n",
     "\n",
-    "# Compute cosine similarities\n",
-    "similarities = util.cos_sim(query_embedding, question_embeddings)\n",
+    "# # Compute cosine similarities\n",
+    "# similarities = util.cos_sim(query_embedding, question_embeddings)\n",
     "\n",
-    "# Find the most similar question\n",
-    "most_similar_idx = similarities.argmax()\n",
-    "print(\"User query: \", query)\n",
-    "print(\"Most Similar Question:\", questions[most_similar_idx])\n",
-    "print(\"Answer:\", answers[most_similar_idx])"
+    "# # Find the most similar question\n",
+    "# most_similar_idx = similarities.argmax()\n",
+    "# print(\"User query: \", query)\n",
+    "# print(\"Most Similar Question:\", questions[most_similar_idx])\n",
+    "# print(\"Answer:\", answers[most_similar_idx])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "53a784d7-7cdb-4400-ac72-d72c13819edd",
    "metadata": {},
    "outputs": [
@@ -574,19 +580,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comparison Results:\n",
-      "Answer 1: Semantic analysis is used to understand the meaning of sentences.\n",
-      "Marks Awarded: 8.91/10\n",
-      "\n",
-      "Answer 2: It helps in analysing the grammar and structure of text.\n",
-      "Marks Awarded: 4.79/10\n",
-      "\n",
-      "Answer 3: This process identifies relationships in the text.\n",
-      "Marks Awarded: 5.16/10\n",
-      "\n",
-      "Answer 4: Understanding semantics means knowing the words' definitions only.\n",
-      "Marks Awarded: 6.74/10\n",
-      "\n"
+      "Model answer: Semantic analysis helps in comprehending the meaning of words and sentences.\n",
+      "Candidate answer: Yonex adalah Framework untuk membangun aplikasi mobile dengan menggunakan teknologi web seperti html dan JavaScript\n",
+      "Semantic Similarity Score: 0.22\n"
      ]
     }
    ],
@@ -596,48 +592,36 @@
     "# Load pre-trained Sentence-BERT model\n",
     "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
     "\n",
-    "# Define a scoring function\n",
-    "def score_similarity(candidate_answer, model_answer, max_marks=10):\n",
+    "def compare_sentences(model_answer, candidate_answer):\n",
     "    \"\"\"\n",
-    "    Compares two sentences and assigns a score based on semantic similarity.\n",
+    "    Compares two sentences and calculates their semantic similarity.\n",
     "    \n",
     "    Args:\n",
-    "        candidate_answer (str): The answer provided by the candidate.\n",
-    "        model_answer (str): The expected answer or reference answer.\n",
-    "        max_marks (int): The maximum marks assignable.\n",
+    "        model_answer (str): The first sentence.\n",
+    "        candidate_answer (str): The second sentence.\n",
     "    \n",
     "    Returns:\n",
-    "        float: Marks awarded based on similarity.\n",
+    "        float: Similarity score between 0 and 1.\n",
     "    \"\"\"\n",
-    "    # Encode sentences to embeddings\n",
-    "    candidate_embedding = model.encode(candidate_answer, convert_to_tensor=True)\n",
-    "    model_embedding = model.encode(model_answer, convert_to_tensor=True)\n",
+    "    # Encode both sentences to embeddings\n",
+    "    embedding1 = model.encode(model_answer, convert_to_tensor=True)\n",
+    "    embedding2 = model.encode(candidate_answer, convert_to_tensor=True)\n",
     "    \n",
     "    # Calculate cosine similarity\n",
-    "    similarity = util.cos_sim(candidate_embedding, model_embedding).item()\n",
-    "    \n",
-    "    # Scale similarity to marks\n",
-    "    return round(similarity * max_marks, 2)\n",
+    "    similarity = util.cos_sim(embedding1, embedding2).item()\n",
+    "    return round(similarity, 2)\n",
     "\n",
-    "# Model answer (gold standard)\n",
-    "model_answer = \"Semantic analysis is the process of understanding the meaning of text.\"\n",
+    "# Define two sentences for comparison\n",
+    "model_answer = \"Semantic analysis helps in comprehending the meaning of words and sentences.\"\n",
+    "candidate_answer = text\n",
     "\n",
-    "# Candidate answers\n",
-    "candidate_answers = [\n",
-    "    \"Semantic analysis is used to understand the meaning of sentences.\",\n",
-    "    \"It helps in analysing the grammar and structure of text.\",\n",
-    "    \"This process identifies relationships in the text.\",\n",
-    "    \"Understanding semantics means knowing the words' definitions only.\"\n",
-    "]\n",
+    "# Calculate similarity\n",
+    "similarity_score = compare_sentences(model_answer, candidate_answer)\n",
     "\n",
-    "# Maximum marks\n",
-    "max_marks = 10\n",
-    "\n",
-    "# Compare each candidate answer\n",
-    "print(\"Comparison Results:\")\n",
-    "for idx, candidate in enumerate(candidate_answers, start=1):\n",
-    "    marks = score_similarity(candidate, model_answer, max_marks)\n",
-    "    print(f\"Answer {idx}: {candidate}\\nMarks Awarded: {marks}/{max_marks}\\n\")\n"
+    "# Display the result\n",
+    "print(f\"Model answer: {model_answer}\")\n",
+    "print(f\"Candidate answer: {candidate_answer}\")\n",
+    "print(f\"Semantic Similarity Score: {similarity_score}\")\n"
    ]
   },
   {
